# minibwa-bindings

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  publish.yml  pypi.yml  python.yml
minibwa/: CHANGELOG.md  Cargo.toml
minibwa-py/: Cargo.toml  pixi.toml  pyproject.toml
minibwa-py/python/minibwa/: _minibwa.pyi
minibwa-py/src/: lib.rs
minibwa-py/tests/: test_align.py
minibwa-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
minibwa-sys/shim/: minibwa_shim.c  minibwa_shim.h
minibwa-sys/tests/: smoke.rs
minibwa/src/: align.rs  hit.rs  opts.rs
