[workspace]
resolver = "2"
# minibwa-py is a member so it inherits the shared workspace version and
# release-plz bumps it in lockstep with the crates. It is kept out of
# `default-members` (and excluded from the `--workspace` ci-* aliases in
# .cargo/config.toml) so the pure-Rust CI never builds the pyo3 extension —
# maturin builds it explicitly from the minibwa-py/ directory.
members = ["minibwa-sys", "minibwa", "minibwa-py"]
default-members = ["minibwa-sys", "minibwa"]

# All workspace crates share this single version (lockstep), inherited via
# `version.workspace = true`. The publish workflow's "Verify lockstep workspace
# versions" gate enforces the invariant; inheriting from one source here makes
# drift structurally impossible and lets release-plz bump every crate by editing
# a single field.
[workspace.package]
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["Nils Homer <nils@fulcrumgenomics.com>"]
repository = "https://github.com/fg-labs/minibwa-bindings"
rust-version = "1.75"

# Internal crates are referenced by dependents via `<crate>.workspace = true`.
# The version requirement is pinned here to the shared workspace version so a
# published crate depends on the exact matching release of its sibling.
[workspace.dependencies]
minibwa-sys = { version = "0.1.6", path = "minibwa-sys" }

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = true
codegen-units = 1
