[package]
name = "minibwa-py"
# Inherit the shared workspace version so this crate — and the wheel maturin
# builds from it — stays in lockstep with the minibwa crates (release-plz bumps
# the single [workspace.package].version). The `pyproject.toml` version is
# `dynamic`, so maturin reads this resolved version for the wheel.
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Nils Homer <nils@fulcrumgenomics.com>"]
repository = "https://github.com/fg-labs/minibwa-bindings"
publish = false

[lib]
name = "_minibwa"
crate-type = ["cdylib"]

[dependencies]
minibwa = { path = "../minibwa" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
